@@ -307,6 +307,40 @@ namespace InfectedQualities.Common
             }
         }
 
+        public override void KillTile(int i, int j, int type, ref bool fail, ref bool effectOnly, ref bool noItem)
+        {
+            if(type == TileID.DemonAltar && ModContent.GetInstance<InfectedQualitiesServerConfig>().AltarEvilSpawning)
+            {
+                int num = 0;
+                while (!WorldGen.genRand.NextBool(3) && num++ < 1000)
+                {
+                    int x = WorldGen.genRand.Next(100, Main.maxTilesX - 100);
+                    int y = WorldGen.genRand.Next((int)Main.rockLayer + 50, Main.maxTilesY - 300);
+                    if (WorldGen.TileType(x, y) == TileID.Stone)
+                    {
+                        if (WorldGen.genRand.NextBool())
+                        {
+                            if (WorldGen.crimson)
+                            {
+                                Main.tile[x, y].TileType = TileID.Crimstone;
+                            }
+                            else
+                            {
+                                Main.tile[x, y].TileType = TileID.Ebonstone;
+                            }
+                        }
+                        else
+                        {
+                            Main.tile[x, y].TileType = TileID.Pearlstone;
+                        }
+                        WorldGen.SquareTileFrame(x, y);
+                        if (Main.netMode == NetmodeID.Server) NetMessage.SendTileSquare(-1, x, y);
+                        break;
+                    }
+                }
+            }
+        }
+
         public override void Unload()
         {
             if(ModContent.GetInstance<InfectedQualitiesServerConfig>().InfectedBiomes)
