@@ -135,6 +135,15 @@ Mods: {
 					'''
 			}
 
+			AltarEvilSpawning: {
+				Label: "[i:833] Демонические алтари создают заражённые блоки"
+				Tooltip:
+					'''
+					Возвращает старую механику игры, при которой разрушение алтаря могло создать заражённый блок в случайном месте в мире
+					Включите, если ходите пострадать
+					'''
+			}
+
 			InfectedPlantera: {
 				Label: "[i:1370] Текстура заражённой Плантеры"
 				Tooltip:
